--- a/chocotone_midi_editor_v1.5_beta.html
+++ b/chocotone_midi_editor_v1.5_beta.html
@@ -664,6 +664,7 @@
                 analogInputCount: 0,
                 fsrThreshold: 100, // Default for FSR input mode
                 debugAnalogIn: false, // Show raw ADC values on OLED
+                batteryAdcPin: 0, // v1.5: ADC pin for battery voltage (0=disabled)
                 multiplexer: {
                     enabled: false,
                     type: "cd74hc4067",
@@ -700,7 +701,12 @@
                             showColorStrips: false,
                             colorStripHeight: 4,
                             topRowAlign: 0,
-                            bottomRowAlign: 0
+                            bottomRowAlign: 0,
+                            // Battery Indicator (v1.5)
+                            showBattery: false,
+                            batteryX: 116,
+                            batteryY: 0,
+                            batteryScale: 1
                         },
                         menu: {
                             headerSize: 1,
@@ -1110,6 +1116,18 @@
                 html += '  <div class="field" style="margin:0"><label style="font-size:9px;color:#888">Pos Y</label><div style="display:flex;align-items:center;gap:4px"><input type="range" min="0" max="' + maxStatusY + '" value="' + (main.statusY || 44) + '" oninput="updOledScreen(\'main\',\'statusY\',parseInt(this.value)); this.nextElementSibling.textContent=this.value" style="flex:1"><span style="font-size:10px;width:18px;text-align:right">' + (main.statusY || 44) + '</span></div></div>';
                 html += '  <div class="field" style="margin:0"><label style="font-size:9px;color:#888">Align</label><select style="font-size:10px;width:100%;background:#111;border:1px solid #444;color:#ddd;padding:2px" onchange="updOledScreen(\'main\',\'statusAlign\',parseInt(this.value))"><option value="0"' + ((main.statusAlign || 0) === 0 ? ' selected' : '') + '>Left</option><option value="1"' + ((main.statusAlign || 0) === 1 ? ' selected' : '') + '>Center</option><option value="2"' + ((main.statusAlign || 0) === 2 ? ' selected' : '') + '>Right</option></select></div>';
                 html += '</div>';
+
+                // Battery Icon Card (v1.5)
+                html += '<div style="background:#252525;padding:8px;border-radius:4px;border:1px solid #22c55e;display:flex;flex-direction:column;gap:6px">';
+                html += '  <div style="display:flex;justify-content:space-between;align-items:center;border-bottom:1px solid #333;padding-bottom:4px;margin-bottom:2px">';
+                html += '    <label style="font-size:11px;font-weight:600;color:#22c55e">🔋 Battery</label>';
+                html += '    <input type="checkbox" ' + (main.showBattery === true ? 'checked' : '') + ' onchange="updOledScreen(\'main\',\'showBattery\',this.checked)" style="width:14px;height:14px">';
+                html += '  </div>';
+                html += '  <div class="field" style="margin:0"><label style="font-size:9px;color:#888">X Pos</label><div style="display:flex;align-items:center;gap:4px"><input type="range" min="0" max="120" value="' + (main.batteryX !== undefined ? main.batteryX : 116) + '" oninput="updOledScreen(\'main\',\'batteryX\',parseInt(this.value)); this.nextElementSibling.textContent=this.value" style="flex:1"><span style="font-size:10px;width:22px;text-align:right">' + (main.batteryX !== undefined ? main.batteryX : 116) + '</span></div></div>';
+                html += '  <div class="field" style="margin:0"><label style="font-size:9px;color:#888">Y Pos</label><div style="display:flex;align-items:center;gap:4px"><input type="range" min="0" max="' + maxStatusY + '" value="' + (main.batteryY !== undefined ? main.batteryY : 0) + '" oninput="updOledScreen(\'main\',\'batteryY\',parseInt(this.value)); this.nextElementSibling.textContent=this.value" style="flex:1"><span style="font-size:10px;width:22px;text-align:right">' + (main.batteryY !== undefined ? main.batteryY : 0) + '</span></div></div>';
+                html += '  <div class="field" style="margin:0"><label style="font-size:9px;color:#888">Scale</label><select style="font-size:10px;width:100%;background:#111;border:1px solid #444;color:#ddd;padding:2px" onchange="updOledScreen(\'main\',\'batteryScale\',parseInt(this.value))"><option value="1"' + ((main.batteryScale || 1) === 1 ? ' selected' : '') + '>1x</option><option value="2"' + ((main.batteryScale || 1) === 2 ? ' selected' : '') + '>2x</option><option value="3"' + ((main.batteryScale || 1) === 3 ? ' selected' : '') + '>3x</option></select></div>';
+                html += '</div>';
+
                 html += '</div>'; // End Elements Grid
             } else if (previewMode === 'menu') {
                 // MENU SCREEN controls
@@ -1681,6 +1699,18 @@
             html += '</div>';
             html += '</div>';
 
+            // Battery Monitoring ADC Pin (v1.5)
+            html += '<div class="msg-box" style="border-color:#22c55e"><div class="msg-title" style="color:#22c55e">🔋 Battery Monitoring</div>';
+            html += '<div class="row">';
+            html += '<div class="field"><label style="font-size:11px">ADC Pin</label><input type="number" min="0" max="39" value="' + (sys.batteryAdcPin || 0) + '" onchange="updSys(\'batteryAdcPin\',parseInt(this.value))"></div>';
+            html += '</div>';
+            html += '<div style="font-size:11px;color:#888;margin-top:6px">';
+            html += '💡 <b>Voltage Divider:</b> Use 2x 100kΩ resistors for 18650 battery<br>';
+            html += '🔌 <b>ADC Pins:</b> GPIO 32, 33, 34, 35, 36, 39 (0 = disabled)<br>';
+            html += '📺 <b>Display settings:</b> Configure icon in OLED Preview card';
+            html += '</div>';
+            html += '</div>';
+
             // Global Special Actions (Combo per button)
             html += renderGlobalSpecialActions();
 
@@ -2200,7 +2230,12 @@
                     showColorStrips: main.showColorStrips === true,
                     colorStripHeight: main.colorStripHeight || 4,
                     topRowAlign: main.topRowAlign || 0,
-                    bottomRowAlign: main.bottomRowAlign || 0
+                    bottomRowAlign: main.bottomRowAlign || 0,
+                    // Battery indicator properties (v1.5)
+                    showBattery: main.showBattery === true,
+                    batteryX: main.batteryX !== undefined ? main.batteryX : 116,
+                    batteryY: main.batteryY !== undefined ? main.batteryY : 0,
+                    batteryScale: main.batteryScale || 1
                 };
             } else if (previewMode === 'menu') {
                 var menu = screens.menu || { headerSize: 1, itemSize: 1, headerY: 0, itemStartY: 14 };
@@ -2695,6 +2730,32 @@
                             drawText(statusText, w - sw, bleY, statusSize);
                         } else {
                             drawCentered(statusText, bleY, statusSize);
+                        }
+                    }
+
+                    // Battery indicator (v1.5) - configurable position and scale
+                    if (ts.showBattery) {
+                        var battScale = ts.batteryScale || 1;
+                        var battX = ts.batteryX !== undefined ? ts.batteryX : (w - 12 * battScale - 2);
+                        var battY = ts.batteryY !== undefined ? ts.batteryY : 0;
+                        var battW = 10 * battScale;
+                        var battH = 7 * battScale;
+                        var tipW = 2 * battScale;
+                        var tipH = 3 * battScale;
+                        var segW = 2 * battScale;
+                        var segH = 5 * battScale;
+                        // Use white for OLED, green for TFT
+                        var battColor = is128 ? '#22c55e' : '#ffffff';
+                        // Draw battery outline
+                        ctx.strokeStyle = battColor;
+                        ctx.lineWidth = 1 * scale;
+                        ctx.strokeRect(battX * scale, battY * scale, battW * scale, battH * scale);
+                        // Draw battery tip
+                        ctx.fillStyle = battColor;
+                        ctx.fillRect((battX + battW) * scale, (battY + (battH - tipH) / 2) * scale, tipW * scale, tipH * scale);
+                        // Draw 3 filled segments (75% demo)
+                        for (var seg = 0; seg < 3; seg++) {
+                            ctx.fillRect((battX + battScale + seg * segW) * scale, (battY + battScale) * scale, segW * scale, segH * scale);
                         }
                     }
                 }
@@ -3288,6 +3349,7 @@
                                 if (data.system.brightness) presetData.system.brightness = data.system.brightness;
                                 if (data.system.analogInputCount !== undefined) presetData.system.analogInputCount = data.system.analogInputCount;
                                 if (data.system.debugAnalogIn !== undefined) presetData.system.debugAnalogIn = data.system.debugAnalogIn;
+                                if (data.system.batteryAdcPin !== undefined) presetData.system.batteryAdcPin = data.system.batteryAdcPin;
 
                                 // Merge OLED config if present (v1.5 beta)
                                 if (data.system.oled) {
